--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,8 @@ android {
 
 repositories {
     mavenCentral()
-    maven {
-        url 'http://repo.spring.io/milestone'
+    maven{
+        url 'https://raw.github.com/zeeshanejaz/unirest-android/mvn-repo'
     }
 }
 
@@ -46,6 +46,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile group:'com.google.code.gson', name:'gson', version:'2.5'
-    compile 'org.springframework.android:spring-android-rest-template:2.0.0.M3'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
+    compile 'com.mashape.unirest:unirest-android:1.0+'
 }
